--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <script src="libraries/p5.js" type="text/javascript"></script>
         <script src="libraries/p5.sound.js" type="text/javascript"></script>
         <script src="libraries/p5.dom.js" type="text/javascript"></script>
-
+        <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script>
 
         <!-- <script   src="https://code.jquery.com/jquery-3.4.1.js"></script> -->
         <!-- <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script> -->
 
         <!-- <script type="text/javascript" src="js/template.js"></script> -->
         <!-- <script src="js/sketch.js"></script> -->
-        <script src="js/ura_Sketch.js"></script>
-    
+        <!-- <script src="js/ura_Sketch.js"></script>
+     -->
     </head>
     <body>
 
@@ -37,15 +37,18 @@
         <div id="sketch-holder" onclick=""></div>
 
         <main>
-            <h1>
-            	URA GEIKO SAI
-            </h1>
-
+            <header>
+                <h1 class="title">
+                URA GEIKO SAI
+                </h1>
+            </header>
+            
         </main>
 
         <footer>
         </footer>
 
+    <script src="js/ura_Sketch.js"></script>
 
     </body>
     </html> 
