--- a/index.html
+++ b/index.html
@@ -29,20 +29,27 @@
      -->
     </head>
     <body>
-
-       <!--  <header>
-            <a class = "title" href="index.html">裏テストweb</a>
-        </header> -->
-
         <div id="sketch-holder" onclick=""></div>
+        <header>
+            <h1 class="title">
+            URA GEIKO SAI
+            </h1>
+        </header>
 
         <main>
-            <header>
-                <h1 class="title">
-                URA GEIKO SAI
-                </h1>
-            </header>
-            
+            <div class="contents">
+                <div class="blank"> </div>
+
+                <div class="p-box">
+                    <h3>-ABOUT URA-</h3>
+                    <p class="p-margin">我々は裏芸工生である</p>
+                </div>
+
+
+
+
+
+            </div>
         </main>
 
         <footer>
