--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
                 <div class="p-box">
                     <h3>-ABOUT URA-</h3>
-                    <p class="p-margin">我々は裏芸工生である</p>
+                    <p class="p-margin">我々は裏芸工生である。我らこそ真の芸工生である。</p>
+                    <p>うんちゃらかんちゃら</p>
+                    <p>うんちゃらかんちゃら</p>
                 </div>
 
 
