--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>裏テストweb</title>
+        <title>URA GEIKO SAI</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="keywords" content="">
         <meta name="description" content="">
