--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </footer>
 
     <script src="js/ura_Sketch.js"></script>
+    <!-- <script src="js/sketch.js"></script> -->
 
     </body>
     </html> 
