--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <body>
         <div id="sketch-holder" onclick=""></div>
         <header>
-            <h1 class="title">
-            URA GEIKO SAI
-            </h1>
+            <!-- <h1 class="title">URA GEIKO SAI</h1> -->
+            <a href="index.html">
+            <img class = "title" src="assets/image/ura_logo.png"">
+            </a>
         </header>
 
         <main>
