--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <head>
         <meta charset="utf-8">
         <title>URA GEIKO SAI</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <meta name="keywords" content="">
-        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,  minimal-ui">
+        <meta name="Keywords" content="URA GEIKO SAI,裏芸工祭,芸工祭2019,名市大" />
+        <meta name="description" content="裏芸工祭サイト。" />
         <meta http-equiv="content-language" content="ja" />
 
         <link rel="stylesheet" type="text/css" href="css/main.css">
+
+        <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+        <meta property="og:title" content="URA GEIKO SAI" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://nekoshiro046.github.io/uraGeikoTest/" />
+        <meta property="og:image" content="assets/image/ura.png" />
+        <meta property="og:description" content="裏芸工祭サイト。" />
+        <meta property="og:site_name" content="URA GEIKO SAI" />
         <!-- <link type="image/png" rel="shortcut icon" href="assets/image/icon.png"> -->
         
         <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
