--- a/index.html
+++ b/index.html
@@ -55,11 +55,24 @@
                     <p>うんちゃらかんちゃら</p>
                     <p>うんちゃらかんちゃら</p>
                 </div>
-
-
-
-
-
+                <div class="p-box">
+                    <h3>-MEMBER-</h3>
+                    <p>我々は裏芸工生である。我らこそ真の芸工生である。</p>
+                    <p>うんちゃらかんちゃら</p>
+                    <p>うんちゃらかんちゃら</p>
+                </div>
+                <div class="p-box">
+                    <h3>-MOVIE-</h3>
+                    <p>我々は裏芸工生である。我らこそ真の芸工生である。</p>
+                    <p>うんちゃらかんちゃら</p>
+                    <p>うんちゃらかんちゃら</p>
+                </div>
+                <div class="p-box">
+                    <h3>-BACK TO OMOTE-</h3>
+                    <p>我々は裏芸工生である。我らこそ真の芸工生である。</p>
+                    <p>うんちゃらかんちゃら</p>
+                    <p>うんちゃらかんちゃら</p>
+                </div>
             </div>
         </main>
 
