--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
         </main>
 
         <footer>
+            <div class="footer">
+                
+            </div>
         </footer>
 
     <script src="js/ura_Sketch.js"></script>
