--- a/index.html
+++ b/index.html
@@ -52,26 +52,26 @@
                 <div class="p-box">
                     <h3>-ABOUT URA-</h3>
                     <p class="p-margin">我々は裏芸工生である。我らこそ真の芸工生である。</p>
-                    <p>うんちゃらかんちゃら</p>
-                    <p>うんちゃらかんちゃら</p>
+                    <p>幹部と部署長だけしかテーマの選定に関われず、俺たち関係ない人間はいつも蚊帳の外だった。<br>
+                    だけど、楽しみにさせることはできなくとも『楽しみにする』ことはできる。そう自分たちに言い聞かせていたんだ。だが、それも許されなかった、奴らはテーマやメインビジュアルに関する仕事を何も隠さずに目の前で始めたんだ！楽しみにしたかったが、事前に知る羽目になった。我々は楽しみにさせることも楽しみにすることも許させなかった…</p>
                 </div>
                 <div class="p-box">
                     <h3>-MEMBER-</h3>
-                    <p>我々は裏芸工生である。我らこそ真の芸工生である。</p>
-                    <p>うんちゃらかんちゃら</p>
-                    <p>うんちゃらかんちゃら</p>
+                    <p>メガネ１</p>
+                    <p>メガネ２</p>
+                    <p>メガネ３</p>
                 </div>
                 <div class="p-box">
                     <h3>-MOVIE-</h3>
-                    <p>我々は裏芸工生である。我らこそ真の芸工生である。</p>
+                    <iframe class="mov-container" src="https://player.vimeo.com/video/355798761" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                     <p>うんちゃらかんちゃら</p>
                     <p>うんちゃらかんちゃら</p>
                 </div>
                 <div class="p-box">
                     <h3>-BACK TO OMOTE-</h3>
-                    <p>我々は裏芸工生である。我らこそ真の芸工生である。</p>
-                    <p>うんちゃらかんちゃら</p>
-                    <p>うんちゃらかんちゃら</p>
+                    <a href="https://geikousai-ncu.com">
+                    <img class = "backImg" src="assets/image/nomnom.jpg"">
+                    </a>
                 </div>
             </div>
         </main>
