--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                     <h3>-MOVIE-</h3>
                     <iframe class="mov-container" src="https://player.vimeo.com/video/355798761" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                     <p>うんちゃらかんちゃら</p>
-                    <p>うんちゃらかんちゃら</p>
+                    <p>仮テキスト</p>
                 </div>
                 <div class="p-box">
                     <h3>-BACK TO OMOTE-</h3>
                     <a href="https://geikousai-ncu.com">
-                    <img class = "backImg" src="assets/image/nomnom.jpg"">
+                    <img class = "backImg" src="assets/image/omote.jpg"">
                     </a>
                 </div>
             </div>
