--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>URA GEIKO SAI</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0,  minimal-ui">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,,user-scalable=no, minimal-ui">
         <meta name="Keywords" content="URA GEIKO SAI,裏芸工祭,芸工祭2019,名市大" />
         <meta name="description" content="裏芸工祭サイト。" />
         <meta http-equiv="content-language" content="ja" />
@@ -36,7 +36,7 @@
         <!-- <script src="js/ura_Sketch.js"></script>
      -->
     </head>
-    <body>
+    <body ontouchmove="event.preventDefault()">
         <div id="sketch-holder" onclick=""></div>
         <header>
             <!-- <h1 class="title">URA GEIKO SAI</h1> -->
@@ -48,17 +48,17 @@
         <main>
             <div class="contents">
                 <div class="blank"> </div>
-
                 <div class="p-box">
                     <!-- <h3>-ABOUT URA-</h3> -->
                     <h3>-<img class = "headingImg" src="assets/image/ura_aboutura.png"">-</h3>
-                    <p class="p-margin">我々は裏芸工生である。我らこそ真の芸工生である。</p>
+                    <p class="p-margin">我々は裏芸工生である。</p>
                     <p>幹部と部署長だけしかテーマの選定に関われず、俺たち関係ない人間はいつも蚊帳の外だった。<br>
                     だけど、楽しみにさせることはできなくとも『楽しみにする』ことはできる。そう自分たちに言い聞かせていたんだ。だが、それも許されなかった、奴らはテーマやメインビジュアルに関する仕事を何も隠さずに目の前で始めたんだ！楽しみにしたかったが、事前に知る羽目になった。我々は楽しみにさせることも楽しみにすることも許させなかった…</p>
                 </div>
                 <div class="p-box">
                     <!-- <h3>-MEMBER-</h3> -->
                     <h3>-<img class = "headingImg" src="assets/image/ura_member.png"">-</h3>
+                    <p class="p-margin"> </p>
                     <p>メガネ１</p>
                     <p>メガネ２</p>
                     <p>メガネ３</p>
@@ -66,8 +66,9 @@
                 <div class="p-box">
                     <!-- <h3>-MOVIE-</h3> -->
                     <h3>-<img class = "headingImg" src="assets/image/ura_movie.png"">-</h3>
-                    <iframe class="mov-container" src="https://player.vimeo.com/video/355798761" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-                    <p>うんちゃらかんちゃら</p>
+                    <p class="p-margin"> </p>
+                    <iframe class="mov-container" src="https://player.vimeo.com/video/355798761" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    <p>movie No.01</p>
                     <p>仮テキスト</p>
                 </div>
                 <div class="p-box">
@@ -76,6 +77,7 @@
                     <img class = "backImg" src="assets/image/omote.jpg"">
                     </a>
                 </div>
+                <div id="sketch-holder2" onclick=""></div>
             </div>
         </main>
 
@@ -84,9 +86,8 @@
                 
             </div>
         </footer>
-
+	<script src="js/sketch.js"></script>
     <script src="js/ura_Sketch.js"></script>
-    <!-- <script src="js/sketch.js"></script> -->
 
     </body>
     </html> 
