--- a/index.html
+++ b/index.html
@@ -69,8 +69,21 @@
                     <p class="p-margin"> </p>
                     <div id = "mov" ><iframe class="mov-container" src="https://player.vimeo.com/video/355798761" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
 
-                    <p><input class = "mov1Btn" type="button" value="movie No.01" onclick="mov1Btn()"></p>
-                    <p><input class = "mov2Btn" type="button" value="movie No.02" onclick="mov2Btn()"></p>
+                    <!-- <button type="button" class="btn-sf-like1" onclick="mov1Btn()">movie No.01</button>
+                    <button type="button" class="btn-sf-like2" onclick="mov2Btn()">movie No.02</button> -->
+                    <!-- <a href="javascript:void(0)" type="button" class="btn-sf-like1" onclick="mov1Btn()">movie No.01</a>
+                    <a href="javascript:void(0)" type="button" class="btn-sf-like2" onclick="mov2Btn()">movie No.02</a> -->
+                    <ul class="foo">
+                    	<li>
+                    		<!-- <p><input class = "mov1Btn" type="button" value="movie No.01" onclick="mov1Btn()"></p> -->
+                    		<a href="javascript:void(0)" type="button" class="btn-sf-like1" onclick="mov1Btn()">movie No.01</a>
+                    	</li>
+                    	<li>
+                    		<!-- <p><input class = "mov2Btn" type="button" value="movie No.02" onclick="mov2Btn()"></p> -->
+                    		<a href="javascript:void(0)" type="button" class="btn-sf-like2" onclick="mov2Btn()">movie No.02</a>
+                    	</li>
+                    </ul>
+
                 </div>
                 <div class="p-box">
                     <h3>-BACK TO OMOTE-</h3>
