--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
      -->
     </head>
     <body>
-        <div id="sketch-holder" onclick=""></div>
+    	<div class="wrapper">
         <header>
             <!-- <h1 class="title">URA GEIKO SAI</h1> -->
             <a href="index.html">
             <img class = "title" src="assets/image/ura_logo.png"">
             </a>
         </header>
+
+        <div id="sketch-holder"></div>
 
         <main>
             <div class="contents">
@@ -100,8 +102,8 @@
                 
             </div>
         </footer>
-	<script src="js/sketch.js"></script>
+	<!-- <script src="js/sketch.js"></script> -->
     <script src="js/ura_Sketch.js"></script>
-
+	</div>
     </body>
     </html> 
