--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="Keywords" content="URA GEIKO SAI,裏芸工祭,芸工祭2019,名市大" />
         <meta name="description" content="裏芸工祭サイト。" />
         <meta http-equiv="content-language" content="ja" />
+        <meta name="apple-mobile-web-app-capable" content="yes">
 
         <link rel="stylesheet" type="text/css" href="css/main.css">
 
