--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>URA GEIKO SAI</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0,,user-scalable=no, minimal-ui">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no, minimal-ui">
         <meta name="Keywords" content="URA GEIKO SAI,裏芸工祭,芸工祭2019,名市大" />
         <meta name="description" content="裏芸工祭サイト。" />
         <meta http-equiv="content-language" content="ja" />
@@ -28,6 +28,8 @@
         <script src="libraries/p5.sound.js" type="text/javascript"></script>
         <script src="libraries/p5.dom.js" type="text/javascript"></script>
         <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="/libraries/dist/css/lightbox.css">
+        <script src="/libraries/dist/js/lightbox.js"></script>
 
         <!-- <script   src="https://code.jquery.com/jquery-3.4.1.js"></script> -->
         <!-- <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script> -->
@@ -62,9 +64,15 @@
                     <!-- <h3>-MEMBER-</h3> -->
                     <h3>-<img class = "headingImg" src="assets/image/ura_member.png"">-</h3>
                     <p class="p-margin"> </p>
-                    <p>メガネ１</p>
-                    <p>メガネ２</p>
-                    <p>メガネ３</p>
+                    <div class="memberBox">
+                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
+                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
+                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
+                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
+                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
+                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
+                    </div>
+
                 </div>
                 <div class="p-box">
                     <!-- <h3>-MOVIE-</h3> -->
