--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <script src="libraries/p5.sound.js" type="text/javascript"></script>
         <script src="libraries/p5.dom.js" type="text/javascript"></script>
         <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="/libraries/dist/css/lightbox.css">
-        <script src="/libraries/dist/js/lightbox.js"></script>
+        <link rel="stylesheet" href="libraries/dist/css/lightbox.css">
+        <script src="libraries/dist/js/lightbox.js"></script>
 
         <!-- <script   src="https://code.jquery.com/jquery-3.4.1.js"></script> -->
         <!-- <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script> -->
@@ -65,12 +65,30 @@
                     <h3>-<img class = "headingImg" src="assets/image/ura_member.png"">-</h3>
                     <p class="p-margin"> </p>
                     <div class="memberBox">
-                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
-                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
-                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
-                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
-                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
-                        <div class="member"><img class = "memberImg" src="assets/member/member1.png"></div>
+                        <div class="member">
+                            <a href="assets/member/member_01b.png" data-lightbox="m-image01"><img class = "memberImg" src="assets/member/member_01a.png"></a>
+                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
+                        </div>
+                        <div class="member">
+                            <a href="assets/member/member_01b.png" data-lightbox="m-image02"><img class = "memberImg" src="assets/member/member_01a.png"></a>
+                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
+                        </div>
+                        <div class="member">
+                            <a href="assets/member/member_01b.png" data-lightbox="m-image03"><img class = "memberImg" src="assets/member/member_01a.png"></a>
+                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
+                        </div>
+                        <div class="member">
+                            <a href="assets/member/member_01b.png" data-lightbox="m-image04"><img class = "memberImg" src="assets/member/member_01a.png"></a>
+                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
+                        </div>
+                        <div class="member">
+                            <a href="assets/member/member_01b.png" data-lightbox="m-image05"><img class = "memberImg" src="assets/member/member_01a.png"></a>
+                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
+                        </div>
+                        <div class="member">
+                            <a href="assets/member/member_01b.png" data-lightbox="m-image06"><img class = "memberImg" src="assets/member/member_01a.png"></a>
+                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
+                        </div>
                     </div>
 
                 </div>
@@ -87,11 +105,11 @@
                     <ul class="foo">
                     	<li>
                     		<!-- <p><input class = "mov1Btn" type="button" value="movie No.01" onclick="mov1Btn()"></p> -->
-                    		<a href="javascript:void(0)" type="button" class="btn-sf-like1" onclick="mov1Btn()">movie No.01</a>
+                    		<a href="javascript:void(0)" type="button" onclick="mov1Btn()"><p class="btn-sf-like1">movie No.01</p></a>
                     	</li>
                     	<li>
                     		<!-- <p><input class = "mov2Btn" type="button" value="movie No.02" onclick="mov2Btn()"></p> -->
-                    		<a href="javascript:void(0)" type="button" class="btn-sf-like2" onclick="mov2Btn()">movie No.02</a>
+                    		<a href="javascript:void(0)" type="button" onclick="mov2Btn()"><p class="btn-sf-like2">movie No.02</p></a>
                     	</li>
                     </ul>
 
