--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                 </div>
 
                 <div class="p-box">
-                    <h3>-BACK TO OMOTE-</h3>
+                    <!-- <h3>-BACK TO OMOTE-</h3> -->
+                    <h3>-<img class = "headingImg" src="assets/image/ura_backtoomote.png"">-</h3>
                     <p class="roundText">ura geikou sai</p>
                     <a href="https://geikousai-ncu.com">
                     <img class = "backImg" src="assets/image/omote.jpg"">
