--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="p-box">
                     <!-- <h3>-MOVIE-</h3> -->
                     <h3>-<img class = "headingImg" src="assets/image/ura_movie.png"">-</h3>
-                    <p class="roundText"  style="bottom: -80%;">ura geikou sai</p>
+                    <p class="roundText"">ura geikou sai</p>
                     <p class="p-margin"> </p>
                     <div id = "mov" ><iframe class="mov-container" src="https://player.vimeo.com/video/355798761" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
 
