--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="p-box">
                     <!-- <h3>-ABOUT URA-</h3> -->
                     <h3>-<img class = "headingImg" src="assets/image/ura_aboutura.png"">-</h3>
-                    <p class="roundText">ura geikou sai</p>
+                    <p class="roundText">ura geikou sai 2019</p>
                     <p class="p-margin">我々は裏芸工生である。</p>
                     <p>幹部と部署長だけしかテーマの選定に関われず、俺たち関係ない人間はいつも蚊帳の外だった。<br>
                     だけど、楽しみにさせることはできなくとも『楽しみにする』ことはできる。そう自分たちに言い聞かせていたんだ。だが、それも許されなかった、奴らはテーマやメインビジュアルに関する仕事を何も隠さずに目の前で始めたんだ！楽しみにしたかったが、事前に知る羽目になった。我々は楽しみにさせることも楽しみにすることも許させなかった…</p>
