--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
         </header>
 
         <div id="sketch-holder"></div>
+        <!-- <div id="container1"></div> -->
 
         <main>
             <div class="contents">
                 <div class="blank"> </div>
+
+                <!-- <div id="container2"></div> -->
 
                 <div class="p-box">
                     <!-- <h3>-ABOUT URA-</h3> -->
@@ -151,6 +154,7 @@
         </footer>
 	<!-- <script src="js/sketch.js"></script> -->
     <script src="js/ura_Sketch.js"></script>
+    <!-- <script src="js/ura_Sketch02.js"></script> -->
 	</div>
     </body>
     </html> 
