--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
                     <!-- <h3>-BACK TO OMOTE-</h3> -->
                     <h3>-<img class = "headingImg" src="assets/image/ura_backtoomote.png"">-</h3>
                     <p class="roundText">ura geikou sai</p>
-                    <a href="https://geikousai-ncu.com">
+                    <!-- <a href="https://geikousai-ncu.com"> -->
+                    <a href="comp.html">
                     <img class = "backImg" src="assets/image/omote.jpg"">
                     </a>
                 </div>
