--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <header>
             <!-- <h1 class="title">URA GEIKO SAI</h1> -->
             <a href="index.html">
-            <img class = "title" src="assets/image/ura_logo.png"">
+            <img class = "title" src="assets/image/ura_title.png"">
             </a>
         </header>
 
@@ -59,7 +59,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-ABOUT URA-</h3> -->
-                    <h3>-<img class = "headingImg" src="assets/image/ura_aboutura.png"">-</h3>
+                    <h3><img class = "headingImg" src="assets/image/ura_aboutura.png""></h3>
                     <p class="roundText">ura geikou sai</p>
                     <p class="p-margin">我々は裏芸工生である。</p>
                     <p>幹部と部署長だけしかテーマの選定に関われず、俺たち関係ない人間はいつも蚊帳の外だった。<br>
@@ -68,7 +68,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-MEMBER-</h3> -->
-                    <h3>-<img class = "headingImg" src="assets/image/ura_member.png"">-</h3>
+                    <h3><img class = "headingImg" src="assets/image/ura_member.png""></h3>
                     <p class="roundText">ura geikou sai</p>
                     <p class="p-margin"> </p>
                     <div class="memberBox">
@@ -96,13 +96,25 @@
                             <a href="assets/member/member_01b.png" data-lightbox="m-image06"><img class = "memberImg" src="assets/member/member_01a.png"></a>
                             <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
+                        <div class="member">
+                            <a href="assets/member/member_01b.png" data-lightbox="m-image04"><img class = "memberImg" src="assets/member/member_01a.png"></a>
+                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
+                        </div>
+                        <div class="member">
+                            <a href="assets/member/member_01b.png" data-lightbox="m-image05"><img class = "memberImg" src="assets/member/member_01a.png"></a>
+                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
+                        </div>
+                        <div class="member">
+                            <a href="assets/member/member_01b.png" data-lightbox="m-image06"><img class = "memberImg" src="assets/member/member_01a.png"></a>
+                            <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
+                        </div>
                     </div>
 
                 </div>
 
                 <div class="p-box">
                     <!-- <h3>-MOVIE-</h3> -->
-                    <h3>-<img class = "headingImg" src="assets/image/ura_movie.png"">-</h3>
+                    <h3><img class = "headingImg" src="assets/image/ura_movie.png""></h3>
                     <p class="roundText"">ura geikou sai</p>
                     <p class="p-margin"> </p>
                     <div id = "mov" ><iframe class="mov-container" src="https://player.vimeo.com/video/355798761" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
@@ -134,9 +146,32 @@
 
                 </div>
 
+
+                <div class="p-box">
+                    <!-- <h3>-GOODS-</h3> -->
+                    <h3><img class = "headingImg" src="assets/image/ura_goods.png""></h3>
+                    <p class="roundText">ura geikou sai</p>
+                    <div class="goods-container">
+                        <div class="goods">
+                            <a href="assets/image/goods01.jpg" data-lightbox="goods01">
+                            <img class = "goodsImg" src="assets/image/goods01.jpg">
+                            <p>Can batch</p>
+                            </a>
+                        </div>
+                        <div class="goods">
+                            <a href="assets/image/goods01.jpg" data-lightbox="goods02">
+                            <img class = "goodsImg" src="assets/image/goods01.jpg">
+                            <p>sticker</p>
+                            </a>
+                        </div>
+                    </div>
+                    </a>
+                </div>
+
+
                 <div class="p-box">
                     <!-- <h3>-BACK TO OMOTE-</h3> -->
-                    <h3>-<img class = "headingImg" src="assets/image/ura_backtoomote.png"">-</h3>
+                    <h3><img class = "headingImg" src="assets/image/ura_backtoomote.png""></h3>
                     <p class="roundText">ura geikou sai</p>
                     <!-- <a href="https://geikousai-ncu.com"> -->
                     <a href="comp.html">
