--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
     <body>
     	<div class="wrapper">
         <header>
+            <!-- <div class="header"> -->
             <!-- <h1 class="title">URA GEIKO SAI</h1> -->
-            <a href="index.html">
-            <img class = "title" src="assets/image/ura_title.png"">
+            <a href="index.html"  class="title">
+            <img class = "titleImg" src="assets/image/ura_title.png"">
             </a>
+            <!-- </div> -->
         </header>
 
         <div id="sketch-holder"></div>
