--- a/index.html
+++ b/index.html
@@ -41,23 +41,28 @@
     </head>
     <body>
     	<div class="wrapper">
+        <!-- <div id="sketch-holder"></div> -->
         <header>
+            <div id="sketch-holder"></div>
+
             <!-- <div class="header"> -->
             <!-- <h1 class="title">URA GEIKO SAI</h1> -->
             <a href="index.html"  class="title">
             <img class = "titleImg" src="assets/image/ura_title.png"">
             </a>
+
+            <div class = "headerLogoBox">
+                <img class = "headerLogoImg" src="assets/image/ura_logo.png"">
+            </div>
             <!-- </div> -->
         </header>
-
-        <div id="sketch-holder"></div>
-        <!-- <div id="container1"></div> -->
+        <!-- <div class = "headerLogoBox">
+            <img class = "headerLogoImg" src="assets/image/ura_logo.png"">
+        </div> -->
 
         <main>
             <div class="contents">
-                <div class="blank"> </div>
-
-                <!-- <div id="container2"></div> -->
+                <div class="blank"></div>
 
                 <div class="p-box">
                     <!-- <h3>-ABOUT URA-</h3> -->
