--- a/comp.html
+++ b/comp.html
@@ -40,7 +40,13 @@
      -->
     </head>
     <body>
+        
         <div class="wrapper">
+            <header>
+                <div class = "dataImg">
+                    <img class = "dataCompImg" src="assets/sketch02_imgs/ura_data_02.png"">
+                </div>
+            </header>
             <main>
                  <div id="sketch-holder"> </div>
             </main>
