--- a/comp.html
+++ b/comp.html
@@ -40,8 +40,11 @@
      -->
     </head>
     <body>
-        
-        <div class="wrapper">
+        <div id="loading">
+            <img src="assets/image/mv.jpg" alt="loading">
+        </div>
+
+        <div id="wrapper"  class="hidden">
             <header>
                 <div class = "dataImg">
                     <img class = "dataCompImg" src="assets/sketch02_imgs/ura_data_02.png"">
