--- a/comp.html
+++ b/comp.html
@@ -10,8 +10,6 @@
         <meta http-equiv="content-language" content="ja" />
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <link rel="stylesheet" type="text/css" href="css/comp.css">
-
         <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
         <meta property="og:title" content="URA GEIKO SAI" />
         <meta property="og:type" content="website" />
@@ -28,6 +26,10 @@
         <script src="libraries/p5.sound.js" type="text/javascript"></script>
         <script src="libraries/p5.dom.js" type="text/javascript"></script>
         <script src="libraries/jquery-3.4.1.js" type="text/javascript"></script>
+        <script src="libraries/pace.min.js" type="text/javascript"></script>
+
+        <link rel="stylesheet" type="text/css" href="css/comp.css">
+        <link rel="stylesheet" type="text/css" href="css/pace.css" charset="utf-8" />
         <!-- <link rel="stylesheet" href="libraries/dist/css/lightbox.css"> -->
         <!-- <script src="libraries/dist/js/lightbox.js"></script> -->
 
@@ -40,11 +42,7 @@
      -->
     </head>
     <body>
-        <div id="loading">
-            <img src="assets/image/mv.jpg" alt="loading">
-        </div>
-
-        <div id="wrapper"  class="hidden">
+        <div class="wrapper">
             <header>
                 <div class = "dataImg">
                     <img class = "dataCompImg" src="assets/sketch02_imgs/ura_data_02.png"">
