--- a/index.html
+++ b/index.html
@@ -80,39 +80,39 @@
                     <p class="p-margin"> </p>
                     <div class="memberBox">
                         <div class="pakuto">
-                            <a href="assets/member/member_01b.jp2" data-lightbox="m-image01"><img class = "memberImg" src="assets/member/member_01a.jpg"></a>
+                            <a href="assets/member/member_01b.jp2" data-lightbox="m-image01"><img class = "memberImg" src="assets/member/member_01a.JPG"></a>
                             <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member01">
-                            <a href="assets/member/member_02b.jp2" data-lightbox="m-image02"><img class = "memberImg" src="assets/member/member_02a.jpg"></a>
+                            <a href="assets/member/member_02b.jp2" data-lightbox="m-image02"><img class = "memberImg" src="assets/member/member_02a.JPG"></a>
                             <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member02">
-                            <a href="assets/member/member_03b.jp2" data-lightbox="m-image03"><img class = "memberImg" src="assets/member/member_03a.jpg"></a>
+                            <a href="assets/member/member_03b.jp2" data-lightbox="m-image03"><img class = "memberImg" src="assets/member/member_03a.JPG"></a>
                             <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member01">
-                            <a href="assets/member/member_04b.jp2" data-lightbox="m-image04"><img class = "memberImg" src="assets/member/member_04a.jpg"></a>
+                            <a href="assets/member/member_04b.jp2" data-lightbox="m-image04"><img class = "memberImg" src="assets/member/member_04a.JPG"></a>
                             <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member01">
-                            <a href="assets/member/member_05b.jp2" data-lightbox="m-image05"><img class = "memberImg" src="assets/member/member_05a.jpg"></a>
+                            <a href="assets/member/member_05b.jp2" data-lightbox="m-image05"><img class = "memberImg" src="assets/member/member_05a.JPG"></a>
                             <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member02">
-                            <a href="assets/member/member_06b.jp2" data-lightbox="m-image06"><img class = "memberImg" src="assets/member/member_06a.jpg"></a>
+                            <a href="assets/member/member_06b.jp2" data-lightbox="m-image06"><img class = "memberImg" src="assets/member/member_06a.JPG"></a>
                             <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member01">
-                            <a href="assets/member/member_07b.jp2" data-lightbox="m-image07"><img class = "memberImg" src="assets/member/member_07a.jpg"></a>
+                            <a href="assets/member/member_07b.jp2" data-lightbox="m-image07"><img class = "memberImg" src="assets/member/member_07a.JPG"></a>
                             <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member02">
-                            <a href="assets/member/member_08b.jp2" data-lightbox="m-image08"><img class = "memberImg" src="assets/member/member_08a.jpg"></a>
+                            <a href="assets/member/member_08b.jp2" data-lightbox="m-image08"><img class = "memberImg" src="assets/member/member_08a.JPG"></a>
                             <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                         <div class="member02">
-                            <a href="assets/member/member_09b.jp2" data-lightbox="m-image09"><img class = "memberImg" src="assets/member/member_09a.jpg"></a>
+                            <a href="assets/member/member_09b.jp2" data-lightbox="m-image09"><img class = "memberImg" src="assets/member/member_09a.JPG"></a>
                             <!-- <img class = "memberImg" src="assets/member/member_01a.png"> -->
                         </div>
                     </div>
