--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             <!-- <div class="header"> -->
             <!-- <h1 class="title">URA GEIKO SAI</h1> -->
             <a href="index.html"  class="title">
-            <img class = "titleImg" src="assets/image/ura_title.png"">
+            <img class = "titleImg" src="assets/image/ura_title.jp2"">
             </a>
 
             <div class = "headerLogoBox">
-                <img class = "headerLogoImg" src="assets/image/ura_logo.png"">
+                <img class = "headerLogoImg" src="assets/image/ura_logo.jp2"">
             </div>
             <!-- </div> -->
         </header>
@@ -66,7 +66,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-ABOUT URA-</h3> -->
-                    <h3><img class = "headingImg" src="assets/image/ura_aboutura.png""></h3>
+                    <h3><img class = "headingImg" src="assets/image/ura_aboutura.jp2"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <p class="p-margin">我々は裏芸工生である。</p>
                     <p>幹部と部署長だけしかテーマの選定に関われず、俺たち関係ない人間はいつも蚊帳の外だった。<br>
@@ -75,7 +75,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-MEMBER-</h3> -->
-                    <h3><img class = "headingImg" src="assets/image/ura_member.png""></h3>
+                    <h3><img class = "headingImg" src="assets/image/ura_member.jp2"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <p class="p-margin"> </p>
                     <div class="memberBox">
@@ -121,7 +121,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-MOVIE-</h3> -->
-                    <h3><img class = "headingImg" src="assets/image/ura_movie.png""></h3>
+                    <h3><img class = "headingImg" src="assets/image/ura_movie.jp2"></h3>
                     <p class="roundText"">ura geikou sai 2019</p>
                     <p class="p-margin"> </p>
                     <div id = "mov" ><iframe class="mov-container" src="https://player.vimeo.com/video/355798761" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
@@ -156,7 +156,7 @@
 
                 <div class="p-box">
                     <!-- <h3>-GOODS-</h3> -->
-                    <h3><img class = "headingImg" src="assets/image/ura_goods.png""></h3>
+                    <h3><img class = "headingImg" src="assets/image/ura_goods.jp2"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <div class="goods-container">
                         <div class="goods">
@@ -178,14 +178,13 @@
 
                 <div class="p-box">
                     <!-- <h3>-BACK TO OMOTE-</h3> -->
-                    <h3><img class = "headingImg" src="assets/image/ura_backtoomote.png""></h3>
+                    <h3><img class = "headingImg" src="assets/image/ura_backtoomote.jp2"></h3>
                     <p class="roundText">ura geikou sai 2019</p>
                     <!-- <a href="https://geikousai-ncu.com"> -->
                     <a href="comp.html">
-                    <img class = "backImg" src="assets/image/omote.jpg"">
+                    <img class = "backImg" src="assets/image/omote.jp2"">
                     </a>
                 </div>
-                <div id="sketch-holder2" onclick=""></div>
             </div>
 
         </main>
